<resources>
    <string name="app_name">NUMAD20S-RongyiChen</string>
    <string name="aboutButton">ABOUT</string>
    <string name="myNameAndEmail">Rongyi Chen\nroychen.engineer@gmail.com</string>
    <string name="link_collector">Link Collector</string>
    <string name="action_settings">Settings</string>
    <string name="no_value_string">No Value</string>
    <string name="assignment_1">About</string>
    <string name="please_enter_website_name">Please enter website name</string>
    <string name="please_enter_url_e_g_https_www_facebook_com">Please enter URL e.g. https://www.facebook.com</string>
    <string name="mathmagic">MathMagic</string>
    <string name="stop_time">Stop Time</string>
    <string name="number_count">Number counts:</string>
    <string name="prime">Prime numbers:</string>
    <string name="find_primes">Find Primes</string>
    <string name="stop_primes">Stop Primes</string>
    <string name="watch_time">Watch Time</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="location_information">LOCATION INFORMATION</string>
    <string name="latitude_processing">Latitude: processing...</string>
    <string name="longitude_processing">Longitude: processing...</string>
    <string name="web_name">Web Name</string>
    <string name="url_enter">Enter URL such as www.google.com</string>
    <string name="link_collectoer_2">Link Collecter 2</string>
    <string name="how_to_delete">Slide left to delete</string>
</resources>
