<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/numberCount"
        android:layout_width="match_parent"
        android:layout_height="226dp"
        android:text="@string/number_count" />

    <TextView
        android:id="@+id/prime"
        android:layout_width="match_parent"
        android:layout_height="139dp"
        android:text="@string/prime" />

    <Button
        android:id="@+id/primeActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="findPrimes"
        android:text="@string/find_primes" />

    <Button
        android:id="@+id/stopPrimes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_primes" />

    <Button
        android:id="@+id/watch_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="watchTimePerMin"
        android:text="@string/watch_time" />

    <Button
        android:id="@+id/stop_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="stopWatchTimePerMin"
        android:text="@string/stop_time" />
</LinearLayout>